--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  scroll_snap_list: ^0.9.1
+  flutter_local_notifications: ^17.1.1
+  workmanager: ^0.5.2
   flutter_bloc: ^8.1.5
   image_picker: ^1.1.0
   dio: ^5.4.3+1
   lottie: ^3.1.0
+  flutter_svg: ^2.0.10+1
+  curved_navigation_bar: ^1.0.3
+#  flutter_facebook_login: ^3.0.0
+  google_sign_in: ^5.2.1
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  google_fonts: ^6.2.1
+  call_log: ^4.0.0
+#  flutter_auth_buttons: ^0.9.0
+#  instagram_login: ^1.3.0
 
 
 dev_dependencies:
@@ -64,8 +77,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
